# weather-forecast

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: aqi_pipeline_dag.py  retrain_dag.py
init-db/: 01_aqi.sql
notebooks/: anomaly_exploration.ipynb  eda.ipynb  historical_backfill.py  test_api_pull.py  train.ipynb
scripts/: backfill_new_cities.py  update_csv.py
src/ingestion/: extract_api.py
src/ml/: anomaly.py  forecast.py  predict.py  train.py
src/serve/: dashboard.py
src/transform/: clean.py  features.py
