[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.55.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.14.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
